Isro Tri Pambudi

--- a/server/.env-template
+++ b/server/.env-template
@@ -1,2 +1,4 @@
 CRYPTO_SALT=<password for crypto>
 GOOGLE_TOKEN=<google token for log in>
+GOOGLE_DEFAULT_PASSWORD=<dummy password for user that login from google>
+JWT_SECRET=<secret for jsonwebtoken>
